--- a/style/formatacao.css
+++ b/style/formatacao.css
@@ -17,12 +17,14 @@
 }
 
 html{
-    height: 100vh;
+    height: 100%;
     font-size: 14px;
+    background: linear-gradient(142deg,#102D40,#388ea1);
 }
 
 body{
-   height: 100vh;
+   height: 100%;
+   background: linear-gradient(142deg,#102D40,#388ea1);
 }
 
 .container{
@@ -30,7 +32,7 @@ body{
     flex-direction: column;
     justify-content: center;
     height: 100%;
-    max-width: 550px;
+    max-width: 450px;
     margin: 0 auto;
     padding: 20px;
     background: linear-gradient(142deg,#102D40,#388ea1);
