--- a/style/styles.css
+++ b/style/styles.css
@@ -5,33 +5,44 @@
 }
 
 .header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
     margin-bottom: 40px;
 }
 
 .header img{
-    max-width: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    max-width: 120px;
+    margin-top: 10px;
     margin-bottom: 20px;
     border-radius: 50%;
 }
 
 .header h1{
-    font-size: 2.5em;
+    font-size: 2em;
     font-weight: 300;
     margin-bottom: 10px;
+    padding: 10px;
     color: var(--cor7);
     text-shadow: 5px 8px 8px rgba(4, 4, 4, 0.619); 
 }
 
 .header p{
-    font-size: 1.5em;
+    font-size: 1.2em;
     font-weight: 600;
+    padding: 10px;
     color: var(--cor3);
     text-shadow: 5px 8px 8px rgba(4, 4, 4, 0.619);
 }
 
 .btn-contatos{
-    display: flex;flex-direction: column;
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: auto;
     margin: 0 auto;
@@ -44,9 +55,9 @@
      display: flex;
      flex-direction: column;
      align-items: center;
-     width: 100%;
+     width: 80%;
      position: relative;
-     gap: 20px;
+     gap: 15px;
 }
 
 .contatos-btn .btn{
@@ -64,7 +75,7 @@
 }
 
 .contatos-btn .btn:hover{
-    width: 550px;
+    width: 70vw;
     transform: scale(1.2);
 }
 
@@ -88,7 +99,7 @@
     font-size: 20px;
     font-weight: 500;
     transform: scale(0);
-    transition: .4s;
+    transition: .6s;
     transition-delay: .1s;
  }
 
