--- a/style/styles.css
+++ b/style/styles.css
@@ -37,8 +37,7 @@ body{
     justify-content: center;
     height: 100%;
     max-width: 450px;
-    margin: 0 auto;
-    padding: 20px;
+    margin: auto;
     background: linear-gradient(142deg,#102D40,#388ea1);
     border: 2px solid white;
 }
@@ -54,7 +53,6 @@ a{
     width: 100%;
     align-items: center;
     text-align: center;
-    margin-bottom: 40px;
 }
 
 .header img{
