--- a/style/styles.css
+++ b/style/styles.css
@@ -43,7 +43,6 @@ body{
 
 a{
     text-decoration: none;
-    color: black;
 }
 
 .header{
@@ -69,7 +68,7 @@ a{
 .header h1{
     display: block;
     width: 100%;
-    font-size: 2em;
+    font-size: 2.2em;
     font-weight: 300;
     margin-bottom: 10px;
     padding: 10px;
@@ -80,7 +79,7 @@ a{
 .header p{
     display: block;
     width: 100%;
-    font-size: 1.2em;
+    font-size: 1.3em;
     font-weight: 600;
     margin-bottom: 30px;
     padding: 10px;
@@ -127,9 +126,11 @@ a{
     transform: scale(1.2);
 }
 
-.contatos-btn .btn .icon img{
+.contatos-btn .btn .icon i{
     display: block;
     width: 30px;
+    margin-left: 10px;
+    
 }
 
 .contatos-btn .btn span{
@@ -139,7 +140,7 @@ a{
 .contatos-btn .btn .icon{
     color: #ccc;
     font-size: 1.5em;
-    transition: .4s;
+    transition: 1s;
     transition-delay: .2s;
 }
 
@@ -152,7 +153,7 @@ a{
     font-size: 20px;
     font-weight: 500;
     transform: scale(0);
-    transition: .6s;
+    transition: 1s;
     transition-delay: .1s;
  }
 
@@ -177,7 +178,6 @@ footer{
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: auto;
     margin: auto;
 }
 
@@ -193,9 +193,6 @@ footer h2{
 
 footer .link-extra{
     display: flex;
-    justify-content: space-evenly;
-    width: 100%;
-    height: auto;
     margin: auto;
 }
 
@@ -203,19 +200,18 @@ footer .link-extra a{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    width: 50px;
-    height: 50px;
     transition: .6s;
+    width: 100px;
+    height: 100px;
 }
 
 footer .link-extra a:hover{
     transform: scale(1.3);
 }
 
-footer .link-extra img{
+footer .link-extra a i{
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
-    width: 20px;
-    height: 30px;
+    color: var(--cor2);
+    font-size: 25px;
 }
